tests/ui/keyword/extern/keyword-extern-as-identifier-expr.rs
fn main() {
    let s = extern::foo::Bar; //~ ERROR expected expression, found keyword `extern`
}
